data/themes/ansel.css
/* ... */
/*======================================
  11. THUMBTABLE (FILMSTRIP / LIGHTTABLE)
  ======================================*/

.dt_thumbtable,
.background {
  background-color: @lighttable_bg_color;
}

.thumb-main {
  margin: 4px;
}

.thumb-background {
  background-color: @thumbnail_bg_color;
  border: 4px solid @thumbnail_bg_color;
}

#thumbtable-filmstrip .thumb-background {
  border-width: 2px;
}

.thumb-main:hover .thumb-background {
  background-color: @thumbnail_hover_bg_color;
  border-color: @thumbnail_hover_bg_color;
}

.thumb-main:selected .thumb-background,
.thumb-main:active .thumb-background {
  background-color: @thumbnail_selected_bg_color;
  border-color: @thumbnail_selected_bg_color;
}

.thumb-image {
  margin: 4px;
}

#thumbtable-filmstrip .thumb-main:selected {
  border-top: 0.105em solid @border_color;
}

.dt_duplicate_ui .thumb-main .thumb-group,
.dt_duplicate_ui .thumb-main .thumb-altered,
.dt_duplicate_ui .thumb-main #thumb-audio,
.dt_duplicate_ui .thumb-altered,
.dt_duplicate_ui #thumb-audio,
.dt_duplicate_ui .thumb-group {
  color: transparent;
}

.thumb-cursor {
  opacity: 0;
}

#thumbtable-filmstrip .thumb-main:selected .thumb-cursor {
  color: @border_color;
  opacity: 1;
}

.thumb-cell {
  border: 4px solid transparent;
  margin: -2px;
}

.dt_group_left,
.thumb-main.dt_group_left:selected {
  border-left: 4px solid @group_border;
}

.dt_group_top,
.thumb-main.dt_group_top:selected {
  border-top: 4px solid @group_border;
}

.dt_group_right,
.thumb-main.dt_group_right:selected {
  border-right: 4px solid @group_border;
}

.dt_group_bottom,
.thumb-main.dt_group_bottom:selected {
  border-bottom: 4px solid @group_border;
}

.dt_thumbtable_reorder .thumb-main:hover {
  border-left: 4px solid @group_border;
}

.dt_group_bottom.hovered-group {
  border-bottom-color: shade(@group_border, 1.3);
}

.dt_group_top.hovered-group {
  border-top-color: shade(@group_border, 1.3);
}

.dt_group_left.hovered-group {
  border-left-color: shade(@group_border, 1.3);
}

.dt_group_right.hovered-group {
  border-right-color: shade(@group_border, 1.3);
}

.thumb-bottom,
.thumb-top {
  padding: 4px;
}

#thumbtable-filmstrip .thumb-bottom,
#thumbtable-filmstrip .thumb-top {
  padding: 2px;
}

.dt_overlays_hover .thumb-main:hover .thumb-bottom,
.dt_overlays_hover .thumb-main:selected .thumb-bottom {
  background-image: linear-gradient(rgba(198, 198, 198, 0.) 0%, rgba(198, 198, 198, 0.45) 25%, rgba(198, 198, 198, 0.9) 50%, rgba(198, 198, 198, 0.9) 100%);
}

.dt_overlays_hover .thumb-main:hover .thumb-top,
.dt_overlays_hover .thumb-main:selected .thumb-top {
  background-image: linear-gradient(rgba(198, 198, 198, 0.9) 0%, rgba(198, 198, 198, 0.9) 50%, rgba(198, 198, 198, 0.45) 75%, rgba(198, 198, 198, 0.) 100%);
}

.thumb-reject {
  margin-right: 3px;
}

.thumb-colorlabels {
  margin-left: 3px;
  opacity: 0.8;
}

.thumb-alternative {
  background-color: rgba(255, 255, 255, 0.7);
  border: 1px solid #666;
  padding: 6px;
}

.thumb-alternative * {
  color: black;
  font-size: 100%;
  font-weight: 700;
}

.dt_overlays_none .dt_thumb_btn,
.dt_overlays_none .thumb-main:hover .dt_thumb_btn,
.dt_overlays_hover .dt_thumb_btn,
.thumb-ext {
  color: transparent;
  background-color: transparent;
}

.dt_thumb_btn,
.dt_overlays_always .thumb-ext,
.dt_overlays_always .thumb-main:hover .thumb-ext,
.dt_overlays_always .thumb-main:selected .thumb-ext,
.dt_overlays_always .thumb-main:hover .dt_thumb_btn,
.dt_overlays_always .thumb-main:selected .dt_thumb_btn,
.dt_overlays_hover .thumb-main:hover .dt_thumb_btn,
.dt_overlays_hover .thumb-main:hover .thumb-group,
.dt_overlays_hover .thumb-main:hover .thumb-altered,
.dt_overlays_hover .thumb-main:hover #thumb-audio,
.dt_overlays_hover .thumb-main:hover .thumb-ext,
.dt_overlays_hover .thumb-main:selected .dt_thumb_btn,
.dt_overlays_hover .thumb-main:selected .thumb-group,
.dt_overlays_hover .thumb-main:selected .thumb-altered,
.dt_overlays_hover .thumb-main:selected #thumb-audio,
.dt_overlays_hover .thumb-main:selected .thumb-ext {
  color: @thumbnail_font_color;
}

.dt_overlays_hover .thumb-main:hover .thumb-reject:active,
.dt_overlays_hover .thumb-main:hover .thumb-reject:hover,
.dt_overlays_hover .thumb-main:selected .thumb-reject:active,
.dt_overlays_hover .thumb-main:selected .thumb-reject:hover,
.dt_overlays_always .thumb-reject:active,
.dt_overlays_always .thumb-main:hover .thumb-reject:active,
.dt_overlays_always .thumb-main:selected .thumb-reject:active,
.dt_overlays_always .thumb-reject:hover {
  color: @colorlabel_red;
}

.dt_overlays_hover .thumb-main:hover .thumb-star,
.dt_overlays_hover .thumb-main:selected .thumb-star,
.dt_overlays_always .thumb-star {
  color: rgba(0, 0, 0, 0.07);
  background-color: rgba(0, 0, 0, 0.07);
}

.dt_overlays_hover .thumb-main:hover .thumb-star:active,
.dt_overlays_hover .thumb-main:selected .thumb-star:active,
.dt_overlays_always .thumb-star:active {
  color: @thumbnail_font_color;
  background-color: @thumbnail_font_color;
}

.dt_overlays_hover .thumb-main:hover .thumb-star:hover,
.dt_overlays_always .thumb-main:hover .thumb-star:hover {
  color: @thumbnail_star_hover_color;
  background-color: @thumbnail_star_bg_color;
}

.dt_overlays_always .thumb-main:hover .thumb-group:hover,
.dt_overlays_always .thumb-main:hover #thumb-audio:hover {
  color: @thumbnail_fg_color;
}

.dt_thumbnail_rating_6 .thumb-image {
  opacity: 0.35;
}

.dt_thumbnail_rating_6.thumb-main:hover .thumb-image {
  opacity: 1;
}

.dt_overlays_always .dt_thumbnail_rating_6 .thumb-ext,
.dt_overlays_always .dt_thumbnail_rating_6 .thumb-altered,
.dt_overlays_always_extended .dt_thumbnail_rating_6 .thumb-ext,
.dt_overlays_always_extended .dt_thumbnail_rating_6 .thumb-altered,
.dt_overlays_always_extended .dt_thumbnail_rating_6 .thumb-bottom-label,
.dt_overlays_mixed .dt_thumbnail_rating_6 .thumb-ext,
.dt_overlays_mixed .dt_thumbnail_rating_6 .thumb-altered {
  color: rgba(0, 0, 0, 0.15);
}
/* ... */

